<resources>
    <string name="app_name">MessengerApp</string>
    <string name="sign_up_btn_txt">SIGN UP</string>
    <string name="not_registered_txt">Not registered?</string>
    <string name="avatar_description">avatar</string>
    <string name="enter_your_nickname_hint">Enter your nickname</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="what_i_do_hint">What I Do</string>
    <string name="sign_in_btn_txt">Sign in</string>
    <string name="update_btn_text">Update</string>
    <string name="sign_out_btn_txt">sign out</string>
    <string name="show_user_list">show user list</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">search</string>
    <string name="search_hint_text">search</string>
    <string name="chat_message_hint">Message</string>
    <string name="time_left">12:30</string>
    <string name="time_right">12:30</string>
    <string name="message">testing huh?</string>
    <string name="nada">nada</string>
    <string name="mic_button_desc">mic_button</string>
    <string name="play_voice_message_desc">play voice message</string>
    <string name="send_button_dsc">send_button</string>
    <string name="search_back_button_description">returns to user page</string>

</resources>