<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Space
        android:id="@+id/SpaceL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/timeViewL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingEnd="@dimen/chat_item_space"
        android:text="@string/time_left"
        android:textAlignment="viewEnd"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/messageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/chat_item_background_right"
        android:paddingStart="@dimen/chat_msg_padding_lr"
        android:paddingTop="@dimen/chat_msg_padding_tb"
        android:paddingEnd="@dimen/chat_msg_padding_lr"
        android:paddingBottom="@dimen/chat_msg_padding_tb"
        android:text="@string/message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/chat_msg_font_size" />

    <TextView
        android:id="@+id/timeViewR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:paddingStart="@dimen/chat_item_space"
        android:text="@string/time_right"
        tools:ignore="RtlSymmetry" />

    <Space
        android:id="@+id/SpaceR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>