<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="@dimen/char_appbar_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/chat_blue"
            app:contentScrim="@color/chat_blue"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/actionModeCloseDrawable" />

            <LinearLayout
                android:id="@+id/UserInfoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/chat_info_margin"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="@dimen/chat_info_padding">

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/proffesionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ImageView
                android:id="@+id/userImageView"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/chat_info_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/nada"
                android:paddingBottom="@dimen/chat_info_padding"
                app:srcCompat="@drawable/avatar_image_placeholder" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/MessagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/chat_info_margin"
            android:paddingEnd="@dimen/chat_info_margin"
            android:paddingBottom="@dimen/chat_view_padding_bottom"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingEnd="@dimen/chat_info_margin"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/transparent"
            app:boxBackgroundMode="filled">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/chat_msg_input_background"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="@color/transparent"
                    android:contentDescription="@string/mic_button_desc"
                    android:onClick="onVoiceMessageClick"
                    android:paddingStart="@dimen/chat_button_padding"
                    android:paddingEnd="@dimen/chat_button_padding"
                    app:srcCompat="@android:drawable/ic_btn_speak_now" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MessageInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/chat_message_hint"
                    android:paddingStart="@dimen/chat_msg_padding_lr"
                    android:paddingEnd="@dimen/chat_msg_padding_lr"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:onClick="onSendButtonPressed"
                    android:paddingStart="@dimen/chat_button_padding"
                    android:paddingEnd="@dimen/chat_button_padding"
                    app:srcCompat="@android:drawable/ic_menu_send"
                    android:contentDescription="@string/send_button_dsc" />
            </LinearLayout>

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>